tools/sddl/assembler/tests/fail/logic_not_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 10
logic.not 5
halt
